Fix start of MarkovGenerator for non unique columns